public static class AnimationNames
{
    public const string Idle = "Idle";
    public const string Walk = "Walk";
    public const string Attack = "Attack";
    public const string Die = "Die";
    public const string Hit = "Hit";
    public const string Jump = "Jump";
    public const string Run = "Run";
    public const string Crouch = "Crouch";
    public const string Shoot = "Shoot";
    public const string LookLeft = "LookLeft";
    public const string LookRight = "LookRight";
    public const string MoveLeft = "moveLeft";
    public const string MoveRight = "moveRight";
}